Minor add functionality for components
-
 
-
