# docs/openapi.yaml
@@ -149,6 +149,28 @@ info:
   version: 1.0.0
 openapi: 3.1.0
 paths:
+  /component/sync:
+    post:
+      operationId: metric_component_sync_post
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/MetacontrollerRequest'
+        required: true
+      responses:
+        '200':
+          content:
+            application/json:
+              schema: {}
+          description: Successful Response
+        '422':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
+          description: Validation Error
+      summary: Metric
   /finalize:
     post:
       operationId: finalize_finalize_post
